--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="./resources/style.css" type="text/css" rel="stylesheet">
+    <link href="/resources/style.css" type="text/css" rel="stylesheet">
     <title>MyTimes</title>
   </head>
   <body>
