--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>MyTimes</title>
   </head>
   <body>
+    <div class="logo">
+    </div>
   <div class="thecontainer">
     </div>
     <nav>
